--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   dialog_flowtter: ^0.3.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
