--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   dialog_flowtter: ^0.3.3
   intl: ^0.18.1
+  dotted_line: ^3.2.2
 
 dev_dependencies:
   flutter_test:
