--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dialog_flowtter: ^0.3.3
   intl: ^0.18.1
   dotted_line: ^3.2.2
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
