--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_spinkit: ^5.2.0
   just_audio: ^0.9.36
   path_provider: ^2.1.1
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +73,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/audio/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
