audio changed to string

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
   flutter_sound: ^9.2.13
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
