--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  equatable: ^2.0.5
+  
+  audio_manager:
+    path: 'packages/audio_manager'
   bloc: ^8.1.2
-  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
   dialog_flowtter: ^0.3.3
-  intl: ^0.18.1
   dotted_line: ^3.2.2
+  flutter_bloc: ^8.1.3
   flutter_spinkit: ^5.2.0
-  just_audio: ^0.9.36
-  path_provider: ^2.1.1
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
-  flutter_sound: ^9.2.13
-  rxdart: ^0.27.7
+  intl: ^0.18.1
+  path_provider: ^2.1.1
+  
+
 
 dev_dependencies:
   flutter_test:
