--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   googleapis_auth: ^1.4.1
   intl: ^0.18.1
   path_provider: ^2.1.1
+  url_launcher: ^6.2.2
   
 dev_dependencies:
   flutter_test:
