--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.18.1
   path_provider: ^2.1.1
   url_launcher: ^6.2.2
+  http: ^0.13.6
   
 dev_dependencies:
   flutter_test:
