images carousel added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.1
   url_launcher: ^6.2.2
   http: ^0.13.6
+  carousel_slider: ^4.2.1
   
 dev_dependencies:
   flutter_test:
